Adjust 'sliders' div size on mobile layouts to avoid extra margin.

--- a/css/index.css
+++ b/css/index.css
@@ -302,7 +302,7 @@ footer div div img:hover {
 	}
 
 	#sliders {
-		width: 320px;
+		width: 315px;
 	}
 
 	#portfolio-nav p {
